--- a/app/src/main/res/layout/activity_dettaglio_media.xml
+++ b/app/src/main/res/layout/activity_dettaglio_media.xml
@@ -8,17 +8,9 @@
     tools:context="unitn.app.DettaglioMedia">
 
     <TextView
+        style="@style/HeaderTitolo"
         android:id="@+id/titoloFilm"
-        android:layout_width="match_parent"
-        android:layout_height="78dp"
-        android:background="#000000"
-        android:gravity="center"
-        android:text="TitoloFilm"
-        android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:typeface="monospace" />
+        android:text="TitoloFilm" />
 
     <LinearLayout
         android:id="@+id/posterAndInfo"
@@ -50,24 +42,24 @@
             android:orientation="vertical">
 
             <TextView
+                style="@style/Header"
                 android:id="@+id/HeaderInfoMedia"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Sinossi"
-                android:textSize="23sp"
                 android:textStyle="bold" />
 
             <TextView
+                style="@style/normalText"
                 android:id="@+id/sinossiText"
+                android:textAlignment="textStart"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginEnd="10dp"
-                android:alpha="0.6"
                 android:scrollbarFadeDuration="@integer/material_motion_duration_medium_2"
                 android:scrollbars="vertical"
                 android:text="@string/lorem_ipsum_1"
-                android:textColor="@color/black"
-                android:textSize="16sp" />
+                />
         </LinearLayout>
     </LinearLayout>
 
@@ -103,7 +95,6 @@
         android:layout_alignParentStart="true"
         android:layout_marginStart="14dp"
         android:layout_marginTop="10dp"
-        android:showText="true"
         android:text="In Locale"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -111,17 +102,13 @@
         android:thumbTint="#69D31E" />
 
     <ImageButton
+        style="@style/dangerousImageButton"
         android:id="@+id/buttonDelete"
-        android:layout_width="72dp"
-        android:layout_height="72dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="40dp"
         android:layout_marginBottom="32dp"
-        android:adjustViewBounds="true"
-        android:background="@color/white"
         android:contentDescription="Button to remove media from DB"
-        android:scaleType="fitCenter"
         android:src="@drawable/delete_bin" />
 
     <ImageButton
