--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,85 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.Test" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+<resources>
+
+    <style name="HeaderTitolo">
+        <item name="android:textColor">@color/titoloText</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:typeface">monospace</item>
+        <item name="android:layout_height">78dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:background">@color/backgroundHeaderTitolo</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="Header">
+        <item name="android:textColor">@color/normalText</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">22sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="normalText">
+        <item name="android:textColor">@color/normalText</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="normalButton">
+        <item name="android:textColor">@color/normalText</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:backgroundTint">@color/Verde</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="dangerousButton" parent="normalButton">
+        <item name="android:backgroundTint">@color/Rosso</item>
+    </style>
+
+    <style name="normalImageButton">
+        <item name="android:textColor">@color/normalText</item>
+        <item name="android:layout_width">72dp</item>
+        <item name="android:layout_height">72dp</item>
+        <item name="android:backgroundTint">@color/Verde</item>
+        <item name="android:background">@drawable/circle</item>
+        <item name="android:paddingVertical">10dp</item>
+        <item name="android:scaleType">fitCenter</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="dangerousImageButton" parent="normalImageButton">
+        <item name="android:backgroundTint">@color/Rosso</item>
+    </style>
+
+
+    <style name="normalTabLayout" parent="Widget.MaterialComponents.TabLayout">
+        <item name="android:background">@color/Verde</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">16sp</item>
+        <item name="tabIndicatorColor">#DCA8FF2F</item>
+        <item name="tabIconTint">@color/black</item>
+        <item name="tabIndicatorFullWidth">true</item>
+        <item name="tabIndicatorHeight">4dp</item>
+        <item name="tabInlineLabel">true</item>
+        <item name="tabTextColor">@color/normalText</item>
+    </style>
+
+    <style name="viewPagerStyle">
+        <item name="android:background">@color/black</item>
+    </style>
+
+    <style name="SCBSwitch">
+        <item name="android:textColor">@color/normalText</item>
+        <item name="android:textSize">16sp</item>
+        <item name="colorControlActivated">#14A315</item>
+        <item name="colorSwitchThumbNormal">#f1f1f1</item>
+        <item name="android:colorForeground">#42221f1f</item>
+        <item name="android:thumbTint">#69D31E</item>
     </style>
 </resources>
