--- a/app/src/main/res/layout/activity_cronologia_media.xml
+++ b/app/src/main/res/layout/activity_cronologia_media.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
@@ -8,13 +7,27 @@
     tools:context="unitn.app.CronologiaMedia">
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="DA FARE TODO"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:textSize="40sp"
-        android:textStyle="bold"
-        />
+        android:id="@+id/titolo"
+        style="@style/HeaderTitolo"
+        android:layout_width="match_parent"
+        android:layout_height="78dp"
+        android:text="Cronologia $NomeUtente" />
+
+    <ScrollView
+        android:id="@+id/scrollview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        android:layout_below="@+id/titolo">
+
+        <LinearLayout
+            android:id="@+id/cronologiaLista"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="6dp"
+            android:layout_marginTop="15dp"
+            android:orientation="vertical">
+        </LinearLayout>
+    </ScrollView>
+
 </RelativeLayout>
